--- a/public/500.html
+++ b/public/500.html
@@ -3,6 +3,6 @@
     <title>500 internal cat error</title>
   </head>
   <body>
-    <h1>Something went wrong while serving this for you</h1>
+    <h1>Something went meow while serving this for you</h1>
   </body>
 </html>
